<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:contentDescription="@string/logo"
        android:onClick="onClick" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="269dp"
        android:id="@+id/mainmenu"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:paddingBottom="10dp" />

        <Button
            android:text="@string/plant_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNmyplants"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water" />

        <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/BTNsettings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water" />

        <Button
            android:text="@string/help_menu"
            android:layout_width="match_parent"
...
