<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_plant_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.gta.demo.SinglePlantMenu"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:id="@+id/LayoutPlants1"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="101dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlant1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Plant 1"
            android:textSize="22sp"
            android:layout_weight="1.01" />

        <ImageButton
            android:layout_width="66dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/btnDel1"
            android:backgroundTint="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:id="@+id/LayoutPlants2"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image2"
            android:layout_width="101dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlant2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Plant 2"
            android:textSize="22sp"
            android:layout_weight="0.83"/>

        <ImageButton
            android:layout_width="66dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/btnDel2"
            android:backgroundTint="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:id="@+id/LayoutPlants3"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="101dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlant3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Plant 3"
            android:textSize="22sp"
            android:layout_weight="1.01" />

        <ImageButton
            android:layout_width="66dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/btnDel3"
            android:backgroundTint="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:id="@+id/LayoutPlants4"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image4"
            android:layout_width="101dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlant4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:text="Plant 4"
            android:layout_weight="0.83" />

        <ImageButton
            android:layout_width="66dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/btnDel4"
            android:backgroundTint="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
