...

    <!-- General -->
    <string name="logo">Logo von WaterMe</string>
    <string name="app_name">WaterMe</string>

    <!-- Main Menu -->
    <string name="plant_menu">My plants</string>
    <string name="help_menu">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- About Menu -->
    <string name="TXTabout">
        WaterMe is the software engineering project of three students at the cooperative states university Karlsruhe, Germany.\n
        \n
...
    </string>
    <string name="jodel">The jodel community approves:</string>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="raspberry_leds">Raspberry LEDs</string>
    <string name="raspberry_wifi">Raspberry WiFi</string>
    <string name="sounds">Sounds</string>
    <string name="submit">Submit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth">Bluetooth</string>
    <string name="bluetooth_paired">Connect to paired device</string>
    <string name="bluetooth_found">Find new devices</string>
    <string name="reload">Reload</string>
    <string name="connect">connect</string>
    <string name="MyPlant">My Plant</string>
    <string name="graph">Graph</string>

    <!-- help -->
    <string name="AskUs">Ask Us</string>
    <string name="helpEnableBtAndConnectPi">Enable Bluetooth and connect Pi</string>
...
    <string name="hours24">24 h</string>
    <string name="days3">3 days</string>
    <string name="week1">1 week</string>
    <string name="showCourse">show course of</string>
    <string name="optimal">optimal</string>
    <string name="alarm">Alarm</string>
    <string name="changescale">Change scale</string>
    <string name="clickme">Click me</string>
    <string name="delete">delete data</string>

    <!--PlantSelect/MyPlants-->
    <string name="MyPlants">MyPlants</string>

...
