...
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/water"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/BTNgetHumidity"

            android:textColor="#FFFFFF"
            android:textSize="22sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
