<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.settings"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@drawable/logo_background_transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWnotifications"
                android:layout_gravity="center_vertical|end" />

            <TextView
                android:text="@string/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frameLayout2"
            android:layout_alignParentStart="true">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWsounds"
                android:layout_gravity="center_vertical|end"
                android:gravity="end" />

            <TextView
                android:text="@string/sounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/raspberry_leds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWled"
                android:layout_gravity="center_vertical|end"
                android:checked="false" />
        </FrameLayout>

        <Button
            android:text="@string/raspberry_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNraspberrywifi"
            android:background="@android:color/transparent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <Button
            android:text="@string/bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNbluetooth"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

    </LinearLayout>

</RelativeLayout>
