<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_raspberrywifi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.WifiMenu"
    android:orientation="vertical"
    android:background="@drawable/logo_background_transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/TXTwifi_id"
            android:textAlignment="textStart"
            android:hint="Enter SSID" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/TXTwifi_password"
            android:contentDescription="Password"
            android:hint="Enter Password" />

        <Button
            android:text="@string/submit"
            android:layout_height="wrap_content"
            android:id="@+id/BTNsubmit"
            android:textAlignment="center"
            android:layout_gravity="right"
            android:layout_width="128dp"
            android:onClick="onButtonTapSubmit" />
    </LinearLayout>

</RelativeLayout>
